# dcs-afterburner

./: .gitattributes  .gitignore  .luacheckrc  Afganistan2D.miz  LICENSE  README.md  Vietguam3D6.2.0.miz  pyproject.toml
.claude/: settings.local.json
.github/: claude.md
.github/workflows/: ci.yml  mission-lint-reusable.yml  mission-lint.yml  publish.yml
afterburner/: cli.py  diff.py
afterburner/bench/: cpu_parser.py  db.py  gm_bench.lua  harness.py  inject.py  log_issues.py  log_parser.py  native_events.py  scoring.py
afterburner/log_analysis/: __init__.py  correlator.py  parser.py  patterns.py
afterburner/models/: findings.py  mission.py  report.py
afterburner/optimize/: engine.py  rewrite.py  safe_fixes.py
afterburner/parsers/: lua_table.py  mission_parser.py
afterburner/reporters/: console.py  json_report.py  markdown.py
afterburner/rules/: __init__.py  base.py  maintainability.py  mission_size.py  performance.py  scripting.py  triggers.py
afterburner/utils/: miz.py
docs/: PLANNING.md  bench.html  ci-additions.md  dcs-linting.md  dcs-release.md  index.html  lualinter.md
docs/wheels/: dcs_afterburner-0.1.0-py3-none-any.whl
tests/: test_bench_cpu_parser.py  test_bench_db.py  test_bench_harness.py  test_bench_inject.py  test_bench_log_issues.py  test_bench_monitor.py  test_bench_native_events.py  test_bench_scoring.py  test_cli.py  test_diff.py  test_log_analysis.py  test_lua_parser.py  test_mission_parser.py  test_miz_unpack.py  test_optimize.py  test_reporters.py  test_rules.py
tools/: bench_monitor.py
